--- a/test/EHTest/app/build.gradle
+++ b/test/EHTest/app/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 29
-
     defaultConfig {
-        applicationId "com.cyberking.developer.eh.test"
+        applicationId "com.jorexdeveloper.eh_test"
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 1
@@ -17,7 +15,6 @@ android {
         }
     }
 }
-
 dependencies {
     api project(':..:..:eh')
     compile fileTree(dir: 'libs', include: ['*.jar'])
