--- a/test/EHTest/app/src/main/AndroidManifest.xml
+++ b/test/EHTest/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.jorexdeveloper.eh_test">
+
 	<application
 		android:allowBackup="true"
 		android:icon="@android:R/drawable/sym_def_app_icon"
 		android:label="EHTest"
-		android:theme="@android:R/style/Theme.Material.Light"
-		android:resizeableActivity="true">
+		android:resizeableActivity="true"
+		android:theme="@android:R/style/Theme.Material.Light">
 		<activity android:name=".MainActivity">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 	</application>
